--- a/css/style.css
+++ b/css/style.css
@@ -6,51 +6,24 @@
 
 body{
     height: 100vh;
+    background-color: rgb(35, 58, 58);
 }
 
 header{
-    height: 60px;
-    text-align: center;
-    position: sticky;
+    height: 88px;
+    position: fixed;
     top: 0;
     background-color:  rgb(82, 134, 134);
     display: flex;
-    justify-content: center;
     align-items: center;
-}
-
-article{
-    background-color: rgb(68, 113, 113);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 120px;
-    position: sticky;
-    top: 60px;
-    border-bottom: 2px solid rgb(29, 48, 48);
-}
-
-
-#searchPic{
-    width:200px;
-    margin: 6px;
-    margin-right: 0;
-}
-
-#search{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width:100%;
-    
+    width: 100%;
 }
 
 main{
+    min-height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 100%;
-    background-color: darkslategrey;
 }
 
 footer{
@@ -69,7 +42,92 @@ a{
     width: fit-content;
     margin: 2px;
     border-radius: 5%;
-    
+}
+
+label{
+    font-weight: bold;
+    color: white;
+    font-family: monospace;
+    font-size: 17px;
+}
+
+select{
+    padding: 3px;
+}
+
+input{
+    padding: 3px;
+    margin: 0;
+    outline: none;
+}
+
+h2{
+    color: azure;
+}
+
+/*Id:s in Header */
+#headImg{
+    width: 250px;
+    height: 80px;
+    margin-top: 0;
+}
+
+/*Id:s in search section */
+#searchSection{
+    background-color: rgb(68, 113, 113);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 120px;
+    position: sticky;
+    top: 88px;
+    border-bottom: 2px solid rgb(29, 48, 48);
+    width: 100%;
+}
+
+#searchPic{
+    width:200px;
+    height: 30px;
+    margin: 8px;
+    margin-right: 0;
+}
+
+#searchForm{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width:100%;  
+}
+
+#searchBar{
+    position: relative;
+}
+
+#searchSubmit{
+    position: absolute;
+    right: 1px;
+    border: none;
+    top: 12px;
+    height: 23px;
+    cursor: pointer;
+    border-radius: 2px;
+    background-image: url(../images/searchImg.png);
+    background-size: cover;
+    text-indent: -99999px;
+    width: 23px;
+    border-radius: 10%;
+}
+
+/*Id:s in displayImage section */
+#displayImage{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100%;
+    width: fit-content;
+    background-color: rgb(47, 79, 79, 0.95) ;
+    padding: 20px;
+    margin-top: 100px;
 }
 
 #errorMessage{
@@ -85,39 +143,3 @@ a{
     border-radius: 30%;
 }
 
-label{
-    font-weight: bold;
-    color: white;
-}
-
-#headerH1{
-    color: white;
-}    
-
-select{
-    padding: 3px;
-  
-}
-
-
-input{
-    padding: 3px;
-    margin: 0;
-    outline: none;
-}
-
-.buttonIn{
-    position: relative;
-}
-
-#searchButton{
-    position: absolute;
-        right: 0px;
-        z-index: 2;
-        border: none;
-        top: 7px;
-        height: 23px;
-        cursor: pointer;
-        transform: translateX(2px);
-        border-radius: 2px;
-}
