--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,10 @@ main{
 footer{
     position: sticky;
     bottom: 0;
-   border: black solid 2px;
+    border: black solid 2px;
     background-color: rgb(82, 134, 134);
+    display: flex;
+    justify-content: space-between;
 }
 
 img{
@@ -78,7 +80,7 @@ h2{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 120px;
+    height: 80px;
     position: sticky;
     top: 88px;
     border-bottom: 2px solid rgb(29, 48, 48);
@@ -100,12 +102,13 @@ h2{
 }
 
 #searchBar{
-    position: relative;
+    position: absolute;
+    top: 20px;
 }
 
 #searchSubmit{
     position: absolute;
-    right: 1px;
+    right: 125px;
     border: none;
     top: 12px;
     height: 23px;
@@ -141,5 +144,22 @@ h2{
     position: sticky;
     top: 300px;
     border-radius: 30%;
+}
+
+#advancedSearch{
+    display: none;
+    position: absolute;
+    bottom: 10px;
+}
+
+#expandButton{
+    position: absolute;
+    right: 40px;
+    bottom: 10px;
+    padding: 2px;
+    border-radius: 8%;
+    background-color: rgb(82, 134, 134);
+    color: white;
+    border: 2px solid rgb(47, 79, 79);
 }
 
