--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,11 @@ input{
 }
 
 h2{
-    color: azure;
+    color: white;
+}
+    
+p{
+    color: white;
 }
 
 /*Id:s in Header */
@@ -103,7 +107,7 @@ h2{
 
 #searchBar{
     position: absolute;
-    top: 20px;
+    top: 10px;
 }
 
 #searchSubmit{
@@ -121,6 +125,33 @@ h2{
     border-radius: 10%;
 }
 
+#advancedSearch{
+    display: none;
+    position: absolute;
+    bottom: 10px;
+}
+
+#expandButton{
+    position: absolute;
+    right: 40px;
+    top: 10px;
+    padding: 2px;
+    border-radius: 8%;
+    background-color: rgb(82, 134, 134);
+    color: white;
+    border: 2px solid rgb(47, 79, 79);
+}
+
+#layout{
+    position: absolute;
+    left: 40px;
+    top: 10px;
+    padding: 2px;
+    border-radius: 8%;
+    background-color: rgb(82, 134, 134);
+    color: white;
+    border: 2px solid rgb(47, 79, 79);
+}
 /*Id:s in displayImage section */
 #displayImage{
     display: flex;
@@ -146,20 +177,15 @@ h2{
     border-radius: 30%;
 }
 
-#advancedSearch{
-    display: none;
-    position: absolute;
-    bottom: 10px;
+/*Effects*/
+img:hover{
+    box-shadow: 0 0 15px grey;
 }
 
-#expandButton{
-    position: absolute;
-    right: 40px;
-    bottom: 10px;
-    padding: 2px;
-    border-radius: 8%;
-    background-color: rgb(82, 134, 134);
-    color: white;
-    border: 2px solid rgb(47, 79, 79);
+#headImg:hover{
+    box-shadow: none;
 }
 
+#expandButton:hover{
+    transform: scale(1.1);
+}
